Added game server

--- a/index.html
+++ b/index.html
@@ -83,7 +83,19 @@
 	<p> - Sincerely, William.</p>
 	</div>
 
-	<!-- Footer -->
+	<!-- Sub-Heading -->
+	<a class="nocolor" href="#tag2"><h2 id="tag2"><img class="semihead" src="/assets/img/logo.png" alt="" />Game servers</h2></a>
+    
+    	<hr />
+
+	<!-- Intro -->
+	<h3>Minecraft</h3>
+
+
+
+	</div>
+	
+  <!-- Footer -->
 	<footer>
     		<hr />
 		<p>~ <a class="nohighlight" target="_blank" href="http://github.com/willeponken">William Wennerström</a> @ <a class="nohighlight" target="_blank" href="http://megalicious.org">megalicious.org</a> ~</p>
