--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 	<!-- Intro -->
 	<h3>Minecraft</h3>
 
-
+	<a href="http://www.gametracker.com/server_info/193.12.119.124:25565/" target="_blank"><img src="http://cache.www.gametracker.com/server_info/193.12.119.124:25565/b_560_95_2.png" border="0" width="560" height="95" alt=""/></a>
+	
+	<a href="http://www.gametracker.com/server_info/193.12.119.124:25566/" target="_blank"><img src="http://cache.www.gametracker.com/server_info/193.12.119.124:25566/b_560_95_1.png" border="0" width="560" height="95" alt=""/></a>
 
 	</div>
 	
