Changed to email address

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <!-- Footer -->
 	<footer>
     		<hr />
-		<p>~ <a class="nohighlight" target="_blank" href="http://github.com/willeponken">William Wennerström</a> @ <a class="nohighlight" target="_blank" href="http://megalicious.org">megalicious.org</a> ~</p>
+		<p>~ <a class="nohighlight" target="_blank" href="http://github.com/willeponken">william</a>[at]<a class="nohighlight" target="_blank" href="http://megalicious.org">megalicious.org</a> ~</p>
 	</footer>
 </body>
 </html>
